<resources>
    <string name="app_name"> NewYorkerUI </string>
    <string name="string_textNewYorker" />
    <string name="string_string_textnewyorker" />
    <string name="new_yorker_v_gge">NEW YORKER VÆGGE</string>
    <string name="opret_tilbud">Opret Tilbud</string>
    <string name="m_l_angives_i_centimeter">Angiv mål i cm</string>
    <string name="indtast_bredten_p_v_ggen">Indtast bredden på væggen</string>
    <string name="indtast_h_jden_p_v_ggen">Indtast højden på væggen</string>
    <string name="afslut">AFSLUT</string>
    <string name="tak_for_bestillingen">Tak for bestillingen</string>
    <string name="OK">Godkend design</string>
    <string name="godkend_m_l">Godkend mål</string>
    <string name="send_bestilling">Send bestilling</string>
    <string name="navn">Navn</string>
    <string name="e_mail">E-mail</string>
    <string name="telefonnummer">Telefonnummer</string>
    <string name="kommentare_til_orderen">Kommentarer til ordren</string>
    <string name="dit_telefonnummer">Dit telefonnummer</string>
    <string name="dit_navn">Dit navn</string>
    <string name="din_email_adresse">Din Email adresse</string>
    <string name="har_du_en_s_rlig_besked">har du en særlig besked ?</string>
    <string name="beregner_dine_valg_vent_venligst">Beregner dine valg, vent venligst.</string>
    <string name="loading">loading</string>
    <string name="vis_design">Vis design</string>
    <string name="opret_et_tilbud">opret et tilbud</string>
    <string name="forhandler">Forhandler</string>
    <string name="_47_dkr">47 DKR</string>
    <string name="din_kommentar">Din kommentar</string>
    <string name="se_katalouge">Se katalouge</string>
    <string name="_4_fag_m_4_glas">4 FAG m/ 4 glas</string>
    <string name="vejl_m_l">Vejl, mål</string>
    <string name="bredde_40_cm">Bredde: 40 CM</string>
    <string name="h_jde_180_cm">Højde: 180 CM</string>
    <string name="pris_4_700">Pris: 4.700,-</string>
    <string name="v_lg_en_type_af_d_r">Vælg en type af dør</string>
    <string name="enkeltd_r_uden_l_sekasse">Enkeltdør uden låsekasse</string>
    <string name="dubeltd_r_uden_l_sekasse">dobeltdør uden låsekasse</string>
    <string name="enkeltd_r_med_l_sekasse">enkeltdør med låsekasse</string>
    <string name="enkelt_skyded_r">enkelt skydedør</string>
    <string name="dubelt_skyded_r">dubelt skydedør</string>
    <string name="dubeltd_r_med_l_sekasse">dobeltdør med låsekasse</string>
    <string name="OK_chooseDoor">OK</string>
    <string name="dubbeltd_r_uden_l_sekasse">Dobbeltdør uden låsekasse</string>
    <string name="dubbeltd_r_med_l_sekasse">Dobbeltdør med låsekasse</string>
    <string name="dubbelt_skyded_r_uden_l_s">Dobbelt skydedør</string>
    <string name="enkelt_skyded_r_uden_l_s">Enkelt skydedør </string>
    <string name="enkeltd_r_med_l_sekassee">Enkeltdør med låsekasse</string>
    <string name="messing_langgreb">Messing langgreb 1 side</string>
    <string name="sort_langgreb">Sort langgreb 1 side</string>
    <string name="ingen">Ingen doorgreb</string>
    <string name="sort_langgreb_2_sider">Sort langgreb 2 sider</string>
    <string name="messing_langgreb_2_sider">Messing langgreb 2 sider</string>
    <string name="v_lg_d_rh_ndtag">Vælg dørhåndtag</string>
    <string name="videre">Videre</string>
    <string name="v_lg_typen_af_glas_i_v_ggen">Vælg typen af glas i væggen</string>
    <string name="skal_v_ggen_have_en_d_r">Skal væggen have en dør?</string>
    <string name="standard_glas">Standard glas</string>
    <string name="satin_glas">Satin glas</string>
    <string name="lyd_glas">Lyd glas</string>
    <string name="tilpas_design">Tilpas Design</string>
    <string name="antal_fag">Antal Fag</string>
    <string name="antal_glas">Antal Glas</string>
    <string name="pris">Pris</string>
    <string name="_9_850">9.850</string>
    <string name="dkk">DKK</string>
    <string name="indtast_bredden_p_v_ggen" />
    <string name="_0">0</string>
    <string name="v_lg_type_af_d_rgreb">Vælg type af dørgreb</string>
    <string name="tilvalg_d_r">Tilvalg Dør</string>
    <string name="textview">TextView</string>
    <string name="enkelt_door">EnkeltDør</string>
    <string name="chosenDoor">valgtDør</string>
    <string name="handle_chosen">handle</string>
    <string name="se_katalog">Se katalog</string>
    <string name="intast_bredden_p_v_ggen">Intast bredden på væggen</string>
    <string name="h_jde_catalog">Højde</string>
    <string name="bredde_catalog">Bredde</string>
    <string name="indtast_bredde_p_v_ggen">Indtast bredde på væggen</string>

</resources>